--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -58,17 +58,48 @@
 
         });
     </script>
+    <script type="text/javascript">
+        $(function(){
+            $(".screenbg ul li").each(function(){
+                $(this).css("opacity","0");
+            });
+            $(".screenbg ul li:first").css("opacity","1");
+            var index = 0;
+            var t;
+            var li = $(".screenbg ul li");
+            var number = li.size();
+            function change(index){
+                li.css("visibility","visible");
+                li.eq(index).siblings().animate({opacity:0},3000);
+                li.eq(index).animate({opacity:1},3000);
+            }
+            function show(){
+                index = index + 1;
+                if(index<=number-1){
+                    change(index);
+                }else{
+                    index = 0;
+                    change(index);
+                }
+            }
+            t = setInterval(show,8000);
+            //根据窗口宽度生成图片宽度
+            var width = $(window).width();
+            $(".screenbg ul img").css("width",width+"px");
+        });
+    </script>
 </head>
 
 <body>
 <div id="tab">
     <ul class="tab_menu">
-        <li class="selected">登录</li>
+        <li class="selected" style="width: 410px"><h1>登录</h1></li>
 
     </ul>
     <div class="tab_box">
         <!-- 学生登录开始 -->
         <div>
+            <div class="stu_error_box"></div>
             <form action="login.action" method="post" class="stu_login_error">
                 <div id="username">
                     <label>用&nbsp;&nbsp;&nbsp;户&nbsp;&nbsp;&nbsp;名：</label>
@@ -76,7 +107,7 @@
                     <!--ajaxurl="demo/valid.jsp"-->
                 </div>
                 <div id="password">
-                    <label>密&nbsp;&nbsp;&nbsp;码：</label>
+                    <label>密&nbsp;&nbsp;&nbsp;码&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;：</label>
                     <input type="password" id="stu_password_hide" name="password" placeholder="输入密码" nullmsg="密码不能为空！" datatype="*6-16" errormsg="密码范围在6~16位之间！" sucmsg="密码验证通过！"/>
                 </div>
                 <div>
